<resources>
    <string name="app_name">NUMAD17F-XiaohuaWang</string>
    <string name="title_name">NUMAD17F-XiaohuaWang</string>

    <string name="MainActivity">NUMAD17F-XiaohuaWang</string>
    <string name="AboutActivity">Xiaohua Wang</string>
    <string name="Acknowledgement">Acknowledgement</string>
    <string name="TestDictionary">Test Dictionary</string>
    <string name="GameActivity">Word Game</string>

    <string name="aboutButton">About</string>
    <string name="errorButton">show me an error</string>
    <string name="name">xiaohua wang</string>
    <string name="email">wxhdax@gmail.com</string>
    <string name="yearInSchool">1st year in NEU</string>
    <string name="uniqueId">unique Id</string>
    <string name="closeButton">Close</string>
    <string name="textViewVersionCode">Version Code : 12</string>
    <string name="textViewVersionName">Version Name : 12.0</string>
    <string name="dictionaryButton">Dictionary</string>
    <string name="clearButton">Clear</string>
    <string name="setSize">setSize</string>
    <string name="acknowledgments">acknowledgments</string>
    <string name="acknowledgmentContent1">Ackownledgements</string>

    <string name="long_app_name">Scroggle Game</string>
    <string name="new_game">Start Game</string>
    <string name="score_board">Scoreboard</string>
    <string name="leader_board">Leaderboard</string>
    <string name="inputUserName">Please input username:length(3-9)</string>

    <string name="timer1">Time Remaining</string>
    <string name="timer2">3:00</string>
    <string name="text_word">Your word</string>
    <string name="text_word1">Your word is</string>
    <string name="score_1">Your score is:</string>
    <string name="score_0">0</string>
    <string name="submit_label">submit</string>
    <string name="pause_button">pause</string>
    <string name="phase2_button">Phase 2</string>
    <string name="phase2_end">Game End</string>
    <string name="phase2_begin">Please press phase2 button.</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="leaderboard">Leaderboard</string>


    <string name="acknowledgmentContent2">
        On building this app, I have referenced the following material. Thank you for all the support!!!
        \n\nQuestion about how to make a beep (from stackoverflow)
        \nhttps://stackoverflow.com/questions/12154940/how-to-make-a-beep-in-android
    </string>
    <string name="acknowledgmentContent3">
        \nQuestion about how to create listview and arrayadapter.
        \nhttps://www.youtube.com/watch?v=eAPFgC9URqc\n
    </string>
    <string name="acknowledgmentContent4">
        Question about how to create log
        \n https://developer.android.com/reference/android/util/Log.html
    </string>

</resources>
