<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/closeButton" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="15sp"
        android:textColor="#000000"
        android:gravity="center"/>
        <!--android:typeface="serif"-->


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="15sp"
        android:textColor="#000000"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yearInSchool"
        android:textSize="15sp"
        android:textColor="#000000"
        android:gravity="center"/>


    <ImageView
        android:id="@+id/selfImage"
        android:layout_width="wrap_content"
        android:layout_height="356dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/my_img1"
        android:layout_weight="0.13" />

    <TextView
        android:id="@+id/uniqueId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uniqueId"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/selfImage"/>


</LinearLayout>