<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.neu.madcourse.xiaohuawang.MainActivity">


    <Button
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <Button
        android:id="@+id/errorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/errorButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutButton" />

    <TextView
        android:id="@+id/textViewVersionCode"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/textViewVersionCode"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorButton"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textViewVersionName"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/textViewVersionName"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVersionCode"
        android:layout_marginStart="8dp" />


</android.support.constraint.ConstraintLayout>
<!--</LinearLayout>-->