<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/acknowledgmentsTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:textSize="17sp"
        android:text="@string/acknowledgmentContent1"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:background="@drawable/border_style1"
        xmlns:android="http://schemas.android.com/apk/res/android"/>


    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/acknowledgmentsTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginTop="30px"
        android:text="@string/acknowledgmentContent2"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:background="@drawable/border_style2"
        android:visibility="visible" />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/acknowledgmentsTextView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginTop="30px"
        android:text="@string/acknowledgmentContent3"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:background="@drawable/border_style2"
        android:visibility="visible" />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/acknowledgmentsTextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginTop="30px"
        android:text="@string/acknowledgmentContent4"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:background="@drawable/border_style2"
        android:visibility="visible" />


</LinearLayout>