<!--
! Excerpted from "Hello, Android",
! published by The Pragmatic Bookshelf.
! Copyrights apply to this code. It may not be used to create training material,
! courses, books, articles, and the like. Contact us if you are in doubt.
! We make no guarantees that this code is fit for any purpose.
! Visit http://www.pragmaticprogrammer.com/titles/eband4 for more book information.
-->

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="edu.neu.madcourse.xiaohuawang.GameActivity">

    <include
        android:id="@+id/large1"
        layout="@layout/small_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_margin="@dimen/small_board_margin"
        android:layout_row="4" />

    <include
        android:id="@+id/large2"
        layout="@layout/small_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_margin="@dimen/small_board_margin"
        android:layout_row="4" />

    <include
        android:id="@+id/large3"
        layout="@layout/small_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_margin="@dimen/small_board_margin"
        android:layout_row="4" />

    <include
        android:id="@+id/large4"
        layout="@layout/small_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_margin="@dimen/small_board_margin"
        android:layout_row="5" />

    <include
        android:id="@+id/large5"
        layout="@layout/small_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_margin="@dimen/small_board_margin"
        android:layout_row="5" />

    <include
        android:id="@+id/large6"
        layout="@layout/small_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_margin="@dimen/small_board_margin"
        android:layout_row="5" />

    <include
        android:id="@+id/large7"
        layout="@layout/small_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_margin="@dimen/small_board_margin"
        android:layout_row="6" />

    <include
        android:id="@+id/large8"
        layout="@layout/small_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_margin="@dimen/small_board_margin"
        android:layout_row="6" />

    <include
        android:id="@+id/large9"
        layout="@layout/small_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_margin="@dimen/small_board_margin"
        android:layout_row="6" />

    <TextView
        android:id="@+id/text_timer1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/timer1"
        android:textAlignment="center"
        android:textColor="@color/text_color1"
        android:textStyle="bold"
        android:textSize="17dp"/>


    <TextView
        android:id="@+id/text_word1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/text_word1"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="17dp"
        android:textColor="@color/text_color1"/>

    <TextView
        android:id="@+id/text_word"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_row="2"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/text_word"
        android:textSize="17dp"/>


    <Button
        android:id="@+id/button_submit"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="7"
        android:text="@string/submit_label"
        android:textAllCaps="false" />


    <Button
        android:id="@+id/button_pauseGame"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="7"
        android:text="@string/pause_button"
        android:textAllCaps="false" />


    <Button
        android:id="@+id/button_phase2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="7"
        android:text="@string/phase2_button"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/score_1"
        android:textAlignment="center"
        android:textColor="@color/text_color1"
        android:textSize="17dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/text_score"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/score_0"
        android:textAlignment="center"
        android:textSize="17dp"
        android:textStyle="bold" />

    <edu.neu.madcourse.xiaohuawang.MyTimer
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:textSize="17dp" />


    <TextView
        android:id="@+id/text_timer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="2"
        android:layout_row="1"
        android:text="03:00"
        android:textAlignment="center"
        android:textColor="@color/textcolor" />

</GridLayout>